--- a/palindrome/styles.css
+++ b/palindrome/styles.css
@@ -8,6 +8,12 @@ body {
   height: 100vh;
 }
 
+h1 {
+  font-size: 28px;
+  margin-bottom: 20px;
+  color: #333;
+}
+
 #middle-this-thing {
   background-color: #ffffff;
   padding: 30px;
