--- a/us-phone-validator/styles.css
+++ b/us-phone-validator/styles.css
@@ -28,7 +28,7 @@ h1 {
   color: #333;
 }
 
-.phone-container {
+#middle-this-thing {
   background-color: #ffffff;
   padding: 30px;
   border-radius: 10px;
