--- a/cash-register/styles.css
+++ b/cash-register/styles.css
@@ -62,7 +62,7 @@ button:hover {
   max-width: 400px;
 }
 
-.output {
+.change-due {
   margin-top: 20px;
   padding: 10px;
   background-color: #f4f4f4;
@@ -76,6 +76,6 @@ button:hover {
   display: none;
 }
 
-.output.visible {
+.change-due.visible {
   display: block;
 }
